# versfm

./: .gitignore  Cargo.toml  LICENSE-MIT  README.MD
src/: aws.rs  lib.rs  providers.rs  view.rs
src/aws/: s3.rs
src/providers/: filesystem.rs  s3.rs
src/view/: components.rs  screens.rs  utils.rs
src/view/components/: err.rs  filesystem_list.rs  s3_list.rs  s3list.rs
src/view/screens/: dual_pane_list.rs  home.rs  mod.rs
versfm_derive/: Cargo.toml
versfm_derive/src/: lib.rs
